--- a/index.html
+++ b/index.html
@@ -1376,6 +1376,32 @@ Leave out normal, simple, boring or standardized parts of your system</p>
 <img src="./images/diag-plantuml-md5-9e862c05e442b22fb22601975867e52c.png" alt="Diagram" width="492" height="207">
 </div>
 </div>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 33.3333%;">
+<col style="width: 66.6667%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top">Name</th>
+<th class="tableblock halign-left valign-top">Responsibility</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Frontend Service</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Manages user interaction and presentation.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Backend Service</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Handles logic, coordination, and communication between the frontend, database, and external services.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Database layer</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Provides secure and efficient storage and retrieval of data for the application.</p></td>
+</tr>
+</tbody>
+</table>
 </div>
 <div class="sect2">
 <h3 id="_level_3">5.3. Level 3</h3>
