--- a/index.html
+++ b/index.html
@@ -1313,9 +1313,19 @@ In the best case you will get away with examples or simple signatures.</p>
 <dl>
 <dt class="hdlist1">Important interfaces</dt>
 <dd>
-<p>+ User ↔ WIChat: Direct interaction through UI.
-+ WIChat ↔ Wikidata: Structured data retrieval for factual information and images.
-+ WIChat ↔ LLM: Natural language understanding and response generation.</p>
+<div class="ulist">
+<ul>
+<li>
+<p>User ↔ WIChat: Direct interaction through UI.</p>
+</li>
+<li>
+<p>WIChat ↔ Wikidata: Structured data retrieval for factual information and images.</p>
+</li>
+<li>
+<p>WIChat ↔ LLM: Natural language understanding and response generation.</p>
+</li>
+</ul>
+</div>
 </dd>
 </dl>
 </div>
@@ -1383,21 +1393,21 @@ Leave out normal, simple, boring or standardized parts of your system</p>
 </colgroup>
 <thead>
 <tr>
-<th class="tableblock halign-left valign-top">Name</th>
-<th class="tableblock halign-left valign-top">Responsibility</th>
+<th class="tableblock halign-left valign-top"><strong>Name</strong></th>
+<th class="tableblock halign-left valign-top"><strong>Responsibility</strong></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Frontend Service</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Frontend Service</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Manages user interaction and presentation.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Backend Service</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Backend Service</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Handles logic, coordination, and communication between the frontend, database, and external services.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Database layer</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Database Layer</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Provides secure and efficient storage and retrieval of data for the application.</p></td>
 </tr>
 </tbody>
